feat(localnet): add optional auth token
